@@ -1150,7 +1150,7 @@ balsa_mblist_open_mailbox(LibBalsaMailbox * mailbox)
     }
     g_object_unref(mbnode);
     
-    balsa_mblist_set_status_bar(mailbox);
+    balsa_window_set_statusbar(balsa_app.main_window, mailbox);
 }
 
 void
@@ -1407,7 +1407,7 @@ bmbl_update_mailbox(GtkTreeStore * store, LibBalsaMailbox * mailbox)
     if (!bindex || mailbox != BALSA_INDEX(bindex)->mailbox_node->mailbox)
         return;
 
-    balsa_mblist_set_status_bar(mailbox);
+    balsa_window_set_statusbar(balsa_app.main_window, mailbox);
 }
 
 void
@@ -2163,54 +2163,6 @@ balsa_mblist_mru_option_menu_get(GtkWidget * combo_box)
     active = gtk_combo_box_get_active(GTK_COMBO_BOX(combo_box));
 
     return g_slist_nth_data(mro->real_urls, active);
-}
-
-void
-balsa_mblist_set_status_bar(LibBalsaMailbox * mailbox)
-{
-    gint total_messages = libbalsa_mailbox_total_messages(mailbox);
-    gint unread_messages = mailbox->unread_messages;
-    gint hidden_messages;
-    GString *desc = g_string_new(NULL);
-    GtkStatusbar *statusbar;
-    guint context_id;
-
-    hidden_messages =
-        mailbox->msg_tree ? total_messages -
-        (g_node_n_nodes(mailbox->msg_tree, G_TRAVERSE_ALL) - 1) : 0;
-
-    /* xgettext: this is the first part of the message
-     * "Shown mailbox: %s with %d messages, %d new, %d hidden". */
-    g_string_append_printf(desc, _("Shown mailbox: %s "), mailbox->name);
-    if (total_messages > 0) {
-        /* xgettext: this is the second part of the message
-         * "Shown mailbox: %s with %d messages, %d new, %d hidden". */
-        g_string_append_printf(desc,
-                               ngettext("with %d message",
-                                        "with %d messages",
-                                        total_messages), total_messages);
-        if (unread_messages > 0)
-            /* xgettext: this is the third part of the message
-             * "Shown mailbox: %s with %d messages, %d new, %d hidden". */
-            g_string_append_printf(desc,
-                                   ngettext(", %d new", ", %d new",
-                                            unread_messages),
-                                   unread_messages);
-        if (hidden_messages > 0)
-            /* xgettext: this is the fourth part of the message
-             * "Shown mailbox: %s with %d messages, %d new, %d hidden". */
-            g_string_append_printf(desc,
-                                   ngettext(", %d hidden", ", %d hidden",
-                                            hidden_messages),
-                                   hidden_messages);
-    }
-
-    statusbar = GTK_STATUSBAR(balsa_app.main_window->statusbar);
-    context_id = gtk_statusbar_get_context_id(statusbar, "BalsaMBList message");
-    gtk_statusbar_pop(statusbar, context_id);
-    gtk_statusbar_push(statusbar, context_id, desc->str);
-
-    g_string_free(desc, TRUE);
 }
 
 static void
