@@ -4682,7 +4682,7 @@ bw_notebook_switch_page_cb(GtkWidget * notebook,
     gtk_combo_box_set_active(GTK_COMBO_BOX(window->filter_choice),
                              index->filter_no);
     balsa_mblist_focus_mailbox(balsa_app.mblist, mailbox);
-    balsa_mblist_set_status_bar(mailbox);
+    balsa_window_set_statusbar(window, mailbox);
 
     balsa_index_refresh_date(index);
     balsa_index_refresh_size(index);
@@ -5184,4 +5184,53 @@ balsa_window_select_all(GtkWindow * window)
 	libbalsa_html_select_all(focus_widget);
 #endif /* HAVE_GTKHTML */
     }
+}
+
+void
+balsa_window_set_statusbar(BalsaWindow * window, LibBalsaMailbox * mailbox)
+{
+    gint total_messages = libbalsa_mailbox_total_messages(mailbox);
+    gint unread_messages = mailbox->unread_messages;
+    gint hidden_messages;
+    GString *desc = g_string_new(NULL);
+    GtkStatusbar *statusbar;
+    guint context_id;
+
+    hidden_messages =
+        mailbox->msg_tree ? total_messages -
+        (g_node_n_nodes(mailbox->msg_tree, G_TRAVERSE_ALL) - 1) : 0;
+
+    /* xgettext: this is the first part of the message
+     * "Shown mailbox: %s with %d messages, %d new, %d hidden". */
+    g_string_append_printf(desc, _("Shown mailbox: %s "), mailbox->name);
+    if (total_messages > 0) {
+        /* xgettext: this is the second part of the message
+         * "Shown mailbox: %s with %d messages, %d new, %d hidden". */
+        g_string_append_printf(desc,
+                               ngettext("with %d message",
+                                        "with %d messages",
+                                        total_messages), total_messages);
+        if (unread_messages > 0)
+            /* xgettext: this is the third part of the message
+             * "Shown mailbox: %s with %d messages, %d new, %d hidden". */
+            g_string_append_printf(desc,
+                                   ngettext(", %d new", ", %d new",
+                                            unread_messages),
+                                   unread_messages);
+        if (hidden_messages > 0)
+            /* xgettext: this is the fourth part of the message
+             * "Shown mailbox: %s with %d messages, %d new, %d hidden". */
+            g_string_append_printf(desc,
+                                   ngettext(", %d hidden", ", %d hidden",
+                                            hidden_messages),
+                                   hidden_messages);
+    }
+
+    statusbar = GTK_STATUSBAR(window->statusbar);
+    context_id =
+        gtk_statusbar_get_context_id(statusbar, "BalsaMBList message");
+    gtk_statusbar_pop(statusbar, context_id);
+    gtk_statusbar_push(statusbar, context_id, desc->str);
+
+    g_string_free(desc, TRUE);
 }
