@@ -1,3 +1,14 @@
+2009-08-26  Peter Bloomfield 
+
+	set-statusbar is a BalsaWindow method.
+
+	* src/balsa-index.c (balsa_index_transfer):
+	* src/balsa-mblist.c (balsa_mblist_open_mailbox),
+	(bmbl_update_mailbox):
+	* src/balsa-mblist.h:
+	* src/main-window.c:
+	* src/main-window.h:
+
 2009-08-20  Peter Bloomfield
 
 	* src/main-window.c: build with --disable-threads.
